Added basic methods to interact with MPE contract from SDK
Allows deposit, withdrawal, opening and funding channels

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 venv/
-snet_sdk.egg-info/
 .idea
+snet_sdk.egg-info/
+blockchain/node_modules/
 __pycache__
+snet_sdk/resources/contracts/abi
+snet_sdk/resources/contracts/networks
