--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,9 +66,8 @@ jobs:
             wget https://github.com/singnet/snet-daemon/releases/download/v5.0.1/snet-daemon-v5.0.1-linux-amd64.tar.gz
             tar -xvf snet-daemon-v5.0.1-linux-amd64.tar.gz
             cd snet-daemon-v5.0.1-linux-amd64
-            cd ~
             ls
-            cp ./testcases/functional_tests/snetd.config.json ./snet-daemon/snet-daemon-v5.0.1-linux-amd64
+            cp ../../snet-sdk-python/testcases/functional_tests/snetd.config.json .
           
       # - name: unit tests
       #   run: |
