--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,4 +73,6 @@ jobs:
         run: |
           ls
           pwd
+          echo ~
+          export PIP_BREAK_SYSTEM_PACKAGES=1
           sh -ex ./testcases/utils/run_all_functional.sh
