--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,31 +39,31 @@ jobs:
       - name: install snet-sdk
         run: pip3 install -e . --break-system-packages
           
-      - name: install platform-contracts
-        run: |
-          cd ..
-          git clone https://github.com/singnet/platform-contracts.git
-          cd platform-contracts
-          npm install
-          npm install ganache-cli
-          npm run-script compile
+      # - name: install platform-contracts
+      #   run: |
+      #     cd ..
+      #     git clone https://github.com/singnet/platform-contracts.git
+      #     cd platform-contracts
+      #     npm install
+      #     npm install ganache-cli
+      #     npm run-script compile
 
-      - name: build example service
-        run: |
-          git clone https://github.com/singnet/example-service.git
-          cd example-service
-          pip3 install -r requirements.txt --break-system-packages
-          sh buildproto.sh
+      # - name: build example service
+      #   run: |
+      #     git clone https://github.com/singnet/example-service.git
+      #     cd example-service
+      #     pip3 install -r requirements.txt --break-system-packages
+      #     sh buildproto.sh
           
-      - name: Set up for snet daemon
-        run: |
-          cd ..
-          mkdir snet-daemon
-          cd snet-daemon
-          wget https://github.com/singnet/snet-daemon/releases/download/v5.0.1/snet-daemon-v5.0.1-linux-amd64.tar.gz
-          tar -xvf snet-daemon-v5.0.1-linux-amd64.tar.gz
-          cd snet-daemon-v5.0.1-linux-amd64
-          cp ../../snet-sdk-python/testcases/functional_tests/snetd.config.json .
+      # - name: Set up for snet daemon
+      #   run: |
+      #     cd ..
+      #     mkdir snet-daemon
+      #     cd snet-daemon
+      #     wget https://github.com/singnet/snet-daemon/releases/download/v5.0.1/snet-daemon-v5.0.1-linux-amd64.tar.gz
+      #     tar -xvf snet-daemon-v5.0.1-linux-amd64.tar.gz
+      #     cd snet-daemon-v5.0.1-linux-amd64
+      #     cp ../../snet-sdk-python/testcases/functional_tests/snetd.config.json .
           
 
       - name: functional tests for cli
