--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,14 +32,14 @@ jobs:
       - name: clone repo
         uses: actions/checkout@v3
           
-      - name: install platform-contracts
-        run: |
-          cd ..
-          git clone https://github.com/singnet/platform-contracts.git
-          cd platform-contracts
-          npm install
-          npm install ganache-cli
-          npm run-script compile
+      # - name: install platform-contracts
+      #   run: |
+      #     cd ..
+      #     git clone https://github.com/singnet/platform-contracts.git
+      #     cd platform-contracts
+      #     npm install
+      #     npm install ganache-cli
+      #     npm run-script compile
 
       - name: build example service
         run: |
