--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,4 +74,5 @@ jobs:
           echo ~
           ls -la ~
           export PIP_BREAK_SYSTEM_PACKAGES=1
+          export PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
           sh -ex ./testcases/utils/run_all_functional.sh
