--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,12 +41,12 @@ jobs:
       #     npm install ganache-cli
       #     npm run-script compile
 
-      - name: build example service
-        run: |
-          git clone https://github.com/singnet/example-service.git
-          cd example-service
-          pip3 install -r requirements.txt --break-system-packages
-          sh buildproto.sh
+      # - name: build example service
+      #   run: |
+      #     git clone https://github.com/singnet/example-service.git
+      #     cd example-service
+      #     pip3 install -r requirements.txt --break-system-packages
+      #     sh buildproto.sh
           
       - name: Set up for snet daemon
         run: |
