--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,8 +59,8 @@ jobs:
       - name: install pip packages
         run: |
           pip3 install -r requirements.txt --break-system-packages
-          # mkdir ~/.snet
-          # cp ./testcases/utils/config ~/.snet/
+          mkdir ~/.snet
+          cp ./testcases/utils/config ~/.snet/
           
       - name: install snet-sdk
         run: pip3 install -e . --break-system-packages
