--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,7 @@ jobs:
           pip3 install -r requirements.txt --break-system-packages
           mkdir ~/.snet
           cp ./testcases/utils/config ~/.snet/
+          cat ~/.snet/config
           
       - name: install snet-sdk
         run: pip3 install -e . --break-system-packages
