--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -2,7 +2,7 @@ name: tests2
 on:
   # push:
   #   branches: [ "master" ]
-  push:
+  pull_request:
     branches: [ "development" ]
   workflow_dispatch:
 
