--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: tests
+name: tests3
 on:
   # push:
   #   branches: [ "master" ]
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-    run_tests:
+    run_tests3:
       runs-on: ubuntu-latest
       container: node:20-bookworm
       steps:
