Fixed StorageProvider class and changed get_from_ipfs_and_checkhash() function.

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,4 @@ grpcio-health-checking==1.59.0
 jsonschema==4.0.0
 eth-account==0.9.0
 snet.contracts==0.1.1
-lighthouseweb3>=0.1.4
+lighthouseweb3==0.1.4
