--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-protobuf>=6.30.0
+protobuf==5.*
 grpcio-tools>=1.71.0
 wheel>=0.45.0
 rlp>=4.1.0
-web3>=6.11.0
+web3==7.*
 ipfshttpclient>=0.7.0
 rfc3986>=2.0.0
 base58>=2.1.1
 grpcio-health-checking>=1.71.0
-snet-contracts==1.0.0
+snet-contracts==1.0.1
 lighthouseweb3>=0.1.4
